--- a/GBAF_Index.html
+++ b/GBAF_Index.html
@@ -74,6 +74,7 @@
                 </div>
 
                 <div class="conteneur_acteurs">
+                    <!--boucle PHP-->
                     <div class="fiche_acteur box_design flex_col">   <!-- logo + h2 + p -->
                         <img class="logo_acteur" src="https://picsum.photos/500/200" title="LogoActeur" alt="Logo Acteur">
                         <div class="texte_suite">
